# stagir

./: CMakeLists.txt  README.md  Readme.txt
logger_library/: CMakeLists.txt
logger_library/include/: logger.hpp  logger.txt
logger_library/src/: logger.cpp
stats_collector/: CMakeLists.txt  stats_collector.cpp
test_app/: CMakeLists.txt  main.cpp
tests/: test_args.cpp
